# SelfSupervisedAttribution

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
src/self_supervised_attribution/: dataset.py  parser.py  schemas.py  vllm_models.py
src/self_supervised_attribution/docling/: __init__.py  deploy.py  pdf_converter.py
